# rart-zephyr-template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  compile_commands.json
rs_lib/: Cargo.toml
rs_lib/src/: lib.rs
src/: main.c  rart.h
